data-xfer/main/default/objects/Data_Source_Instance__c/Data_Source_Instance__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Data Source Instance</label>
</CustomObject>