data-xfer/main/default/objects/Data_Source_Instance__c/fields/API_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Id__c</fullName>
    <label>API Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>