data-xfer/main/default/objects/Data_Source_Instance__c/fields/Data_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Name__c</fullName>
    <externalId>true</externalId>
    <label>Data Source Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>