data-xfer/main/default/objects/Data_Source_Instance__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>