data-xfer/main/default/objects/Data_Source_Instance__c/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <label>Instance Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>